@@ -33,14 +33,14 @@ fun warn_duplicates [] = []
 
 fun (Pack(safes,unsafes)) add_safes ths   = 
     let val dups = warn_duplicates (gen_inter Drule.eq_thm_prop (ths,safes))
-	val ths' = gen_rems Drule.eq_thm_prop (ths,dups)
+	val ths' = subtract Drule.eq_thm_prop dups ths
     in
         Pack(sort (make_ord less) (ths'@safes), unsafes)
     end;
 
 fun (Pack(safes,unsafes)) add_unsafes ths = 
     let val dups = warn_duplicates (gen_inter Drule.eq_thm_prop (ths,unsafes))
-	val ths' = gen_rems Drule.eq_thm_prop (ths,dups)
+	val ths' = subtract Drule.eq_thm_prop dups ths
     in
 	Pack(safes, sort (make_ord less) (ths'@unsafes))
     end;
